# OpenSauce26

./: .gitmodules  3_18_26.md
gachapaw/boards/: .gitignore
gachapaw/boards/paypi/: paypi.kicad_pro
gachapaw/boards/paypi/gerber/: paypi-B_Mask.gbs  paypi-B_Silkscreen.gbo  paypi-Edge_Cuts.gm1  paypi-F_Mask.gts  paypi-F_Silkscreen.gto  paypi-In1_Cu.g1  paypi-In2_Cu.g2  paypi-NPTH-drl_map.gbr  paypi-NPTH.drl  paypi-PTH-drl_map.gbr  paypi-job.gbrjob
gachapaw/boards/tof_mount/: tof_mount.kicad_pcb  tof_mount.kicad_pro  tof_mount.kicad_sch
gachapaw/payment/: .gitignore  my_private_key  settings.gradle.kts
gachapaw/payment/app/: build.gradle.kts
gachapaw/payment/app/src/main/cpp/: CMakeLists.txt  gpio-lib.cpp
gachapaw/payment/docs/: requirements.md
gachapaw/payment/gradle/: libs.versions.toml
gachapaw/payment/gradle/wrapper/: gradle-wrapper.properties
gachapaw/paypi/: paypi.kicad_pcb  paypi.kicad_sch
gachapaw/paypi/gerber/: paypi-B_Cu.gbl  paypi-B_Paste.gbp  paypi-F_Cu.gtl  paypi-F_Paste.gtp  paypi-PTH.drl
gachapaw/tof_mount/: tof_mount.kicad_pcb  tof_mount.kicad_sch
gachapaw/tof_mount/jlcpcb/: project.db
gachapaw/tof_mount/jlcpcb/gerber/: tof_mount-CuBottom.gbr  tof_mount-CuTop.gbr  tof_mount-MaskBottom.gbr  tof_mount-MaskTop.gbr
gachapaw/tof_mount_software/: platformio.ini
gachapaw/tof_mount_software/src/: ch32v003_i2c.h  funconfig.h  gpio.c  gpio.h  main.c  main.cpp  tof.c  tof.h
notes/: 2_18_26.md  2_25_26.md  3_11_26.md  3_4_26.md  4_15_26  4_28_26.md  4_8_26.md  5_20_26.md  5_27_26.md  5_6_26.md  6_10_26.md  6_13_26.md  6_17_26.md
(+42 files in other folders)
